Prevent popup text annotation from overflow

--- a/viewer/latexworkshop.css
+++ b/viewer/latexworkshop.css
@@ -182,3 +182,7 @@ html[dir='rtl'] .findbar {
     left: calc(var(--scale-factor) * var(--unit-width) * (1 - var(--trim-factor)) / 2) !important;
     /* top: calc(var(--scale-factor) * var(--unit-height) * (1 - var(--trim-factor)) / 2) !important; */
 }
+
+.annotationLayer .popup {
+    margin: 0 calc(5px * var(--scale-factor));
+}
